# wormhole

./: Dockerfile.const  Dockerfile.node  SECURITY.md  Tiltfile  WORKSHOP_STARTER_PACK.md  cspell.config.yaml  go.work  go.work.sum  package-lock.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: build.yml
aptos/: Dockerfile  Dockerfile.base  Dockerfile.contracts
aptos/.aptos/: config.yaml
aptos/coin/: Move.toml  dump.txt  package-metadata.bcs  read_dump.py
aptos/contracts/: Move.toml
aptos/scripts/: README.md  constants.ts  (+7 more)
aurora/: Docker.md  Dockerfile  Dockerfile.base  NOTES.md
bitcoin/: NOTES
bridge_ui/: package-lock.json  package.json
clients/: .gitignore
cosmwasm/: Cargo.toml  Makefile
cosmwasm/contracts/wormchain-btc/: Cargo.toml  README.md  build.rs
cosmwasm/contracts/wormchain-btc/examples/: btc_tx.rs
cosmwasm/contracts/wormchain-btc/scripts/: explore.sh
cosmwasm/contracts/wormchain-btc/src/: contract.rs  error.rs  keeper.rs  lib.rs  msg.rs  state.rs  tests.rs
devnet/: aptos-localnet.yaml  aurora-devnet.yaml  btc-localnet.yaml  near-devnet.yaml  node.yaml  plugin-executor.yaml  plugin-listener.yaml  wormchain.yaml
docs/: operations.md
ethereum/: .env.filecoin.testnet  Dockerfile  Makefile  foundry.toml  package-lock.json  package.json  truffle-config.js  upgrade_all_testnet
near/: Makefile  NOTES.md  TODO  devnet_deploy.ts  package-lock.json  package.json  rust-toolchain.toml
relayer/: .prettierrc  README.md
scripts/: check-docker-pin.sh  devnet-consts.json  guardian-set-init.sh  update-guardian-set.sh
sdk/rust/near/: Cargo.toml
sdk/rust/near/src/: lib.rs
solana/: Anchor.toml  Cargo.toml  Dockerfile  Dockerfile.arm.base  Dockerfile.wasm  Dockerfile.wasm.base  install_platform_tools.sh
solana/bridge/client/src/: main.rs
solana/bridge/cpi_poster/src/: instructions.rs
solana/bridge/cpi_poster/src/api/: post_message.rs
solana/bridge/program/src/: error.rs  instructions.rs  types.rs  vaa.rs
solana/bridge/program/src/accounts/: bridge.rs  claim.rs  fee_collector.rs  guardian_set.rs  posted_message.rs  posted_vaa.rs  sequence.rs  signature_set.rs
solana/bridge/program/src/api/: governance.rs  initialize.rs  post_message.rs  post_vaa.rs  verify_signature.rs
solana/bridge/program/tests/: integration.rs
solana/bridge/program_stub/src/api/: post_vaa.rs
solana/migration/: Cargo.toml
solana/migration/src/: accounts.rs  lib.rs
solana/migration/src/api/: add_liquidity.rs  claim_shares.rs  create_pool.rs  migrate_tokens.rs  remove_liquidity.rs
solana/modules/nft_bridge/program/: Cargo.toml
solana/modules/nft_bridge/program/src/: accounts.rs  lib.rs  messages.rs
solana/modules/nft_bridge/program/src/api/: complete_transfer.rs  governance.rs  initialize.rs  transfer.rs
solana/modules/nft_bridge/program/tests/: common.rs  integration.rs
solana/modules/token_bridge/client/src/: main.rs
solana/modules/token_bridge/program/: Cargo.toml
solana/modules/token_bridge/program/src/: accounts.rs  instructions.rs  lib.rs  messages.rs
solana/modules/token_bridge/program/src/api/: attest.rs  complete_transfer.rs  complete_transfer_payload.rs  create_wrapped.rs  governance.rs  initialize.rs  transfer.rs  transfer_payload.rs
solana/modules/token_bridge/program/tests/: integration.rs
solana/programs/core-bridge/: Cargo.toml
solana/programs/core-bridge/src/: constants.rs  lib.rs  types.rs
solana/programs/core-bridge/src/legacy/processor/: initialize.rs  post_vaa.rs
solana/programs/core-bridge/src/legacy/processor/governance/: guardian_set_update.rs  mod.rs  set_message_fee.rs  transfer_fees.rs  upgrade_contract.rs
solana/programs/core-bridge/src/legacy/processor/post_message/: mod.rs  unreliable.rs
solana/programs/core-bridge/src/processor/parse_and_verify_vaa/: close_encoded_vaa.rs
solana/programs/core-bridge/src/processor/post_message/: close_message_v1.rs
solana/programs/core-bridge/src/sdk/: mod.rs  publish_message.rs
solana/programs/core-bridge/src/utils/: mod.rs
solana/programs/core-bridge/src/utils/vaa/: mod.rs
solana/programs/token-bridge/: Cargo.toml
solana/programs/token-bridge/src/: lib.rs  messages.rs
solana/programs/token-bridge/src/legacy/processor/: attest_token.rs  create_or_update_wrapped.rs
solana/programs/token-bridge/src/legacy/processor/complete_transfer/: mod.rs  native.rs  wrapped.rs
solana/programs/token-bridge/src/legacy/processor/complete_transfer_with_payload/: mod.rs  native.rs  wrapped.rs
solana/programs/token-bridge/src/legacy/processor/governance/: upgrade_contract.rs
solana/programs/token-bridge/src/legacy/processor/transfer_tokens/: native.rs
solana/programs/token-bridge/src/legacy/processor/transfer_tokens_with_payload/: native.rs
solana/programs/token-bridge/src/legacy/state/: wrapped_asset.rs
solana/programs/token-bridge/src/processor/governance/: mod.rs  register_chain.rs
solana/programs/token-bridge/src/sdk/: mod.rs
solana/programs/token-bridge/src/utils/: vaa.rs
solana/solitaire/: rustfmt.toml
solana/solitaire/program/: Cargo.toml
solana/solitaire/program/src/: accounts.rs  context.rs  create.rs  error.rs  iterator.rs  layers.rs  lib.rs  macros.rs  prelude.rs
solana/solitaire/program/src/layers/: borsh_data.rs  derive.rs  info.rs  key.rs  mutable.rs  pack_data.rs  signer.rs
solana/solitaire/program/src/macros/: accounts.rs  instruction.rs  pack_type.rs  require.rs  solitaire.rs  tracing.rs
solana/solitaire/program/src/processors/: keyed.rs  peel.rs  persist.rs  seeded.rs
solana/solitaire/program/src/types/: accounts.rs  context.rs
solana/solitaire/rocksalt/src/: lib.rs  to_instruction.rs
solana/tests/01__coreBridge/: 006__postMessage.ts  008__postMessageUnreliable.ts  010__setMessageFee.ts  012__transferFees.ts  014__guardianSetUpdate.ts
solana/tests/02__tokenBridge/: 100__registerChain.ts
temp/: batch_vaa_testing.md
terra/: Makefile
terra2/: Makefile  README.md
wh/: go.mod  go.sum  main.go
whitepapers/: 0003_token_bridge.md
wormchain/: .gitignore  Dockerfile  Makefile
xpla/: Makefile
(+445 files in other folders)
