[package]
name = "btcbridge"
description = "Wormhole chain contract responsible for managing private keys for bridging assets like BTC"
version = "0.1.0"
authors = ["Conor Patrick <cpatrick@jumptrading.com>"]
edition = "2018"
license = "Apache-2.0"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bitcoin = "0.29.2"
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
cw-storage-plus = "0.13.4"
thiserror = { version = "1.0.23" }
schemars = "0.8"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
serde_repr = "0.1.8"
base64 = "0.13"
regex = { git = "https://github.com/rust-lang/regex" }
chasm-contract = { git = "https://github.com/JumpCrypto/chasm", features=["library"] }
chasm-types = { git = "https://github.com/JumpCrypto/chasm", features=[] }

[dev-dependencies]
async-trait = { version = "0.1", default-features = false }
chasm-contract = { git = "https://github.com/JumpCrypto/chasm", features=["library", "test-util"] }
chasm-types= { git = "https://github.com/JumpCrypto/chasm", features=["test-util"] }
cosmwasm-schema = { version = "1.0.0-beta" }
# bitcoincore-rpc = "0.16.0"
bitcoincore-rpc = { git = "https://github.com/conorpp/rust-bitcoincore-rpc", branch = "use-reqwest" }
k256 = "0.10.4"
tracing = "0.1.33"
env_logger = "0.9.0"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
test-log = { version = "0.2.11", features = ["trace"] }
tokio = {version = "1.17.0", features = ["sync", "rt", "macros", "time", "rt-multi-thread"], default-features = false}
tonic = {version = "0.7", features = ["codegen", "prost"], default-features = false }
rand = "0.8"

[build-dependencies]
tonic-build = "0.7"
vergen = { version = "7", default-features = false, features = ["build", "git", "rustc"] }

# [patch."https://git.w2k.jumptrading.com/cpatrick/chasm-types-contract"]
# chasm-contract = { path = "../chasm-types-contract/chasm-contract" }
# chasm-types = { path = "../chasm-types-contract/chasm-types" }

# [patch.crates-io]
# bitcoincore-rpc = {path = "../rust-bitcoincore-rpc/client"}
