[package]
name    = "wormhole-near"
version = "0.1.0"
edition = "2018"


[features]


[profile.release]
opt-level = 3
lto       = "thin"


[dependencies]
bstr            = "*"
byteorder       = "*"
hex             = "*"
near-sdk        = { version = "4.0.0", features = ["unstable"] }
nom             = { version="7", default-features=false, features=["alloc"] }
primitive-types = { version="0.9.0", default-features=false }
sha3            = "0.9.1"
wormhole-core   = { path = "../core" }


[dev-dependencies]
byteorder      = "*"
hex            = "*"
