[package]
name = "wormhole-token-bridge-solana"
description = "Wormhole Token Bridge Program for Solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
#name = "core_bridge_program"

[features]
default = ["mainnet", "cpi", "no-idl"]
### A.K.A. Local Validator (via JS Integration Test) and Tilt
localnet = ["wormhole-solana-vaas/localnet", "core-bridge-program/localnet"]
### A.K.A. Solana Mainnet-Beta
mainnet = ["wormhole-solana-vaas/mainnet", "core-bridge-program/mainnet"]
### A.K.A. Solana Devnet
testnet = ["wormhole-solana-vaas/testnet", "core-bridge-program/testnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies.core-bridge-program]
path = "../core-bridge"
version = "0.0.1-alpha.3"
package = "wormhole-core-bridge-solana"
features = ["cpi"]
default-features = false

[dependencies]
anchor-spl = { workspace = true, features = ["metadata"] }
mpl-token-metadata.workspace = true

wormhole-raw-vaas.workspace = true

wormhole-solana-consts.workspace = true
wormhole-solana-utils.workspace = true
wormhole-solana-vaas.workspace = true

anchor-lang.workspace = true
solana-program.workspace = true

hex.workspace = true
ruint.workspace = true

cfg-if.workspace = true

[dev-dependencies]
hex-literal.workspace = true