[package]
name = "solitaire"
version = "0.1.0"
description = "Solana program framework"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solitaire"

[features]
default       = ["client"]

client        = ["no-entrypoint", "solana-sdk"]
cpi           = ["no-entrypoint"]
no-entrypoint = []
trace         = []

[dependencies]
borsh          = "=0.9.1"
byteorder      = "1.4.3"
sha3           = "0.9.1"
solana-program = "=1.9.4"
solana-sdk     = { version = "=1.9.4", optional = true }
